<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home"
    android:id="@+id/nav_graph_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.codepad.foodai.ui.home.home.HomeTabFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_tab" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.codepad.foodai.ui.home.analytics.AnalyticsTabFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics_tab" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.codepad.foodai.ui.home.settings.SettingsTabFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_navigation_settings_to_personalFragment"
            app:destination="@id/personalFragment" />

    </fragment>


    <fragment
        android:id="@+id/personalFragment"
        android:name="com.codepad.foodai.ui.home.settings.personal.PersonalFragment"
        android:label="PersonalFragment"/>

</navigation>